# probors-desktop

./: .gitignore  DESKTOP_UPDATES_AND_DOWNLOAD.md  README.md  RELEASE_AND_UPDATE_TEST.md  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: offline.html  update-progress.html  update.html
src-tauri/src/: main.rs
