[package]
name = "probors_desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = { version = "2" }
serde_json = "1.0"
once_cell = "1.20"

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = "0.24"

